# sopel-mangadex

./: NEWS  README.md  pyproject.toml
sopel_mangadex/: plugin.py
